Refactor S3 replay and event-processing architecture
Enhanced replay and real-time event processing by introducing distinct SQS queues for source and replay workflows. Updated environment configuration, added Lambda functions for SQS processing, introduced DynamoDB for offset tracking, and refined the ECS and Docker setup. README and tests were updated to reflect these changes.