@@ -1,34 +1,78 @@
 package com.intentïon.S3SqsBridge;
 
-import software.amazon.awscdk.*;
+import software.amazon.awscdk.CfnOutput;
+import software.amazon.awscdk.Duration;
+import software.amazon.awscdk.RemovalPolicy;
+import software.amazon.awscdk.Stack;
+import software.amazon.awscdk.StackProps;
+import software.amazon.awscdk.services.dynamodb.Attribute;
+import software.amazon.awscdk.services.dynamodb.AttributeType;
+import software.amazon.awscdk.services.dynamodb.Table;
 import software.amazon.awscdk.services.ecr.assets.DockerImageAsset;
-import software.amazon.awscdk.services.ecs.*;
+import software.amazon.awscdk.services.ecs.AwsLogDriverProps;
+import software.amazon.awscdk.services.ecs.CapacityProviderStrategy;
+import software.amazon.awscdk.services.ecs.Cluster;
+import software.amazon.awscdk.services.ecs.ContainerDefinition;
+import software.amazon.awscdk.services.ecs.ContainerDefinitionOptions;
+import software.amazon.awscdk.services.ecs.ContainerImage;
+import software.amazon.awscdk.services.ecs.FargateTaskDefinition;
+import software.amazon.awscdk.services.ecs.LogDriver;
+import software.amazon.awscdk.services.ecs.PortMapping;
+import software.amazon.awscdk.services.ecs.Protocol;
 import software.amazon.awscdk.services.ecs.patterns.ApplicationLoadBalancedFargateService;
-import software.amazon.awscdk.services.iam.*;
+import software.amazon.awscdk.services.iam.ArnPrincipal;
+import software.amazon.awscdk.services.iam.Effect;
 import software.amazon.awscdk.services.iam.PolicyDocument;
 import software.amazon.awscdk.services.iam.PolicyStatement;
-import software.amazon.awscdk.services.s3.*;
+import software.amazon.awscdk.services.iam.Role;
+import software.amazon.awscdk.services.iam.ServicePrincipal;
+import software.amazon.awscdk.services.lambda.Function;
+import software.amazon.awscdk.services.lambda.eventsources.SqsEventSource;
+import software.amazon.awscdk.services.lambda.nodejs.BundlingOptions;
+import software.amazon.awscdk.services.lambda.nodejs.LogLevel;
+import software.amazon.awscdk.services.lambda.nodejs.NodejsFunction;
+import software.amazon.awscdk.services.lambda.nodejs.OutputFormat;
+import software.amazon.awscdk.services.s3.Bucket;
+import software.amazon.awscdk.services.s3.EventType;
+import software.amazon.awscdk.services.s3.IBucket;
+import software.amazon.awscdk.services.s3.notifications.SqsDestination;
 import software.amazon.awscdk.services.sqs.Queue;
 import software.constructs.Construct;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 
 public class S3SqsBridgeStack extends Stack {
+
+    public S3SqsBridgeStack(final Construct scope, final String id) {
+        this(scope, id, null);
+    }
 
     public S3SqsBridgeStack(final Construct scope, final String id, final StackProps props) {
         super(scope, id, props);
 
-        final String bucketName = getConfigValue("s3BucketName");
-        final boolean useExistingBucket = Boolean.parseBoolean(getConfigValue("s3UseExistingBucket"));
-        final boolean retainBucket = Boolean.parseBoolean(getConfigValue("s3RetainBucket"));
-        final String queueName = getConfigValue("sqsQueueName");
-        final String taskServiceName = getConfigValue("taskServiceName");
-        final int taskCpu = Integer.parseInt(getConfigValue("taskCpu"));
-        final int taskMemory = Integer.parseInt(getConfigValue("taskMemory"));
-        final int taskPort = Integer.parseInt(getConfigValue("taskPort"));
+        final String awsS3WriterArnPrinciple = getConfigValue("AWS_S3_WRITER_ARN_PRINCIPLE", "awsS3WriterArnPrinciple");
+        final String bucketName = getConfigValue("BUCKET_NAME", "s3BucketName");
+        final String objectPrefix = getConfigValue("OBJECT_PREFIX", "s3ObjectPrefix");
+        final boolean useExistingBucket = Boolean.parseBoolean(getConfigValue("USE_EXISTING_BUCKET", "s3UseExistingBucket"));
+        final boolean retainBucket = Boolean.parseBoolean(getConfigValue("RETAIN_BUCKET", "s3RetainBucket"));
+        final String sourceQueueName = getConfigValue("SQS_SOURCE_QUEUE_NAME", "sqsSourceQueueName");
+        final String replayQueueName = getConfigValue("SQS_REPLAY_QUEUE_NAME", "sqsReplayQueueName");
+        final String taskServiceName = getConfigValue("TASK_SERVICE_NAME", "taskServiceName");
+        final int taskCpu = Integer.parseInt(getConfigValue("TASK_CPU", "taskCpu"));
+        final int taskMemory = Integer.parseInt(getConfigValue("TASK_MEMORY", "taskMemory"));
+        final int taskPort = Integer.parseInt(getConfigValue("TASK_PORT", "taskPort"));
+        final String lambdaRuntime = getConfigValue("LAMBDA_RUNTIME", "lambdaRuntime");
+        final String lambdaTarget = getConfigValue("LAMBDA_TARGET", "lambdaTarget");
+        final String lambdaFormat = getConfigValue("LAMBDA_FORMAT", "lambdaFormat");
+        final String lambdaEntry = getConfigValue("LAMBDA_ENTRY", "lambdaEntry");
+        final String lambdaSourceFunctionName = getConfigValue("LAMBDA_SOURCE_FUNCTION_NAME", "lambdaSourceFunctionName");
+        final String lambdaReplayFunctionName = getConfigValue("LAMBDA_REPLAY_FUNCTION_NAME", "lambdaReplayFunctionName");
+        final String lambdaLogLevel = getConfigValue("LAMBDA_LOG_LEVEL", "lambdaLogLevel");
 
         // S3 Bucket creation with versioning and appropriate removal policies.
-        Bucket s3Bucket;
+        IBucket s3Bucket;
         if (useExistingBucket) {
             s3Bucket = Bucket.fromBucketName(this, "ExistingBucket", bucketName);
         } else {
@@ -40,11 +84,129 @@ public class S3SqsBridgeStack extends Stack {
                     .build();
         }
 
-        // SQS Queue for events.
-        Queue eventQueue = Queue.Builder.create(this, "EventQueue")
-                .queueName(queueName)
+        // Create standalone IAM role with inline policy for S3 permissions
+        PolicyStatement s3ObjectCrudPolicyStatement = PolicyStatement.Builder.create()
+                .effect(Effect.ALLOW)
+                .actions(List.of(
+                        "s3:PutObject",
+                        "s3:GetObject",
+                        "s3:ListBucket",
+                        "s3:DeleteObject"
+                ))
+                .resources(List.of(
+                        s3Bucket.getBucketArn(),
+                        s3Bucket.getBucketArn() + "/*"
+                ))
+                .build();
+        Role s3AccessRole = Role.Builder.create(this, "S3AccessRole")
+                .assumedBy(new ArnPrincipal(awsS3WriterArnPrinciple))
+                .inlinePolicies(java.util.Collections.singletonMap("S3AccessPolicy", PolicyDocument.Builder.create()
+                        .statements(List.of(s3ObjectCrudPolicyStatement))
+                        .build()))
+                .build();
+
+        // SQS Queue for actual PUT events.
+        Queue sourceQueue = Queue.Builder.create(this, "SourceQueue")
+                .queueName(sourceQueueName)
                 .visibilityTimeout(Duration.seconds(300))
                 .build();
+
+        s3Bucket.addEventNotification(
+                EventType.OBJECT_CREATED_PUT,
+                new SqsDestination(sourceQueue)
+        );
+
+        // SQS Queue for replay PUT events.
+        Queue replayQueue = Queue.Builder.create(this, "ReplayQueue")
+                .queueName(replayQueueName)
+                .visibilityTimeout(Duration.seconds(300))
+                .build();
+
+        // Create a DynamoDB table named "offsets" with the partition key 'bucketName'
+        // and sort key 'objectPrefix'. The additional attributes 'source' and 'offset' will be
+        // stored along with items, no explicit attribute definitions are required since DynamoDB is schemaless.
+        Table offsetsTable = Table.Builder.create(this, "OffsetsTable")
+                .tableName("offsets")
+                .partitionKey(Attribute.builder()
+                        .name("bucketName")
+                        .type(AttributeType.STRING)
+                        .build())
+                .sortKey(Attribute.builder()
+                        .name("objectPrefix")
+                        .type(AttributeType.STRING)
+                        .build())
+                .removalPolicy(RemovalPolicy.DESTROY)
+                .build();
+
+        software.amazon.awscdk.services.lambda.Runtime lambdaRuntimeEnum = software.amazon.awscdk.services.lambda.Runtime.ALL.stream()
+                .filter(r -> r.toString().equalsIgnoreCase(lambdaRuntime))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Invalid Lambda runtime: " + lambdaRuntime));
+
+        Function sourceLambda = NodejsFunction.Builder.create(this, "SQSSourceLambda")
+                //.runtime(lambdaRuntimeEnum)
+                .runtime(software.amazon.awscdk.services.lambda.Runtime.NODEJS_20_X)
+                .entry(lambdaEntry)
+                .handler("lambda.handler")
+                .bundling(BundlingOptions.builder()
+                        //.bundleAwsSDK(true)
+                        //.sourceMap(true)
+                        //.sourcesContent(true)
+                        .target(lambdaTarget)
+                        //.format(OutputFormat.valueOf(lambdaFormat))
+                        .format(OutputFormat.ESM)
+                        //.image(Runtime.NODEJS_20_X.getBundlingImage())
+                        .command(Arrays.asList("bash", "-c", "npm install && cp -R . /asset-output"))
+                        //.command(Arrays.asList("bash", "-c", "npm cache clean --force && npm install && cp -R . /asset-output"))
+                        //.logLevel(LogLevel.valueOf(lambdaLogLevel))
+                        .logLevel(LogLevel.INFO)
+                        //.keepNames(true)
+                        //.mainFields(List.of("module", "main"))
+                        //.externalModules(List.of("@aws-sdk/*", "cool-module"))
+                        .environment(Map.of("TABLE_NAME", offsetsTable.getTableName()))
+                        .build())
+                .functionName(lambdaSourceFunctionName)
+                //.sourceMap(true)
+                //.sourcesContent(true)
+                //.logLevel(LogLevel.INFO)
+                //.keepNames(true)
+                .build();
+        offsetsTable.grantReadWriteData(sourceLambda);
+        sourceLambda.addEventSource(new SqsEventSource(sourceQueue));
+
+        Function replayLambda = NodejsFunction.Builder.create(this, "SQSReplayLambda")
+                //.runtime(lambdaRuntimeEnum)
+                .runtime(software.amazon.awscdk.services.lambda.Runtime.NODEJS_20_X)
+                .entry(lambdaEntry)
+                .handler("lambda.handler")
+                .bundling(BundlingOptions.builder()
+                        //.bundleAwsSDK(true)
+                        //.sourceMap(true)
+                        //.sourcesContent(true)
+                        .target(lambdaTarget)
+                        //.format(OutputFormat.valueOf(lambdaFormat))
+                        .format(OutputFormat.ESM)
+                        //.image(Runtime.NODEJS_20_X.getBundlingImage())
+                        .command(Arrays.asList("bash", "-c", "npm install && cp -R . /asset-output"))
+                        //.command(Arrays.asList("bash", "-c", "npm cache clean --force && npm install && cp -R . /asset-output"))
+                        //.logLevel(LogLevel.valueOf(lambdaLogLevel))
+                        .logLevel(LogLevel.INFO)
+                        //.keepNames(true)
+                        //.mainFields(List.of("module", "main"))
+                        //.externalModules(List.of("@aws-sdk/*", "cool-module"))
+                        .environment(Map.of("TABLE_NAME", offsetsTable.getTableName()))
+                        .build())
+                .functionName(lambdaReplayFunctionName)
+                //.sourceMap(true)
+                //.sourcesContent(true)
+                //.logLevel(LogLevel.INFO)
+                //.keepNames(true)
+                .build();
+        offsetsTable.grantReadWriteData(sourceLambda);
+        sourceLambda.addEventSource(new SqsEventSource(replayQueue));
+
+        // Optionally, you may add policy statements if you wish to restrict the Lambda permissions
+        // even further by building and attaching custom IAM policies.
 
         // Refined IAM Role for ECS Tasks with least-privilege inline policies.
         PolicyStatement s3Policy = PolicyStatement.Builder.create()
@@ -53,13 +215,13 @@ public class S3SqsBridgeStack extends Stack {
                 .build();
 
         PolicyStatement sqsPolicy = PolicyStatement.Builder.create()
-                .actions(Arrays.asList("sqs:SendMessage"))
-                .resources(Arrays.asList(eventQueue.getQueueArn()))
+                .actions(List.of("sqs:SendMessage"))
+                .resources(List.of(replayQueue.getQueueArn()))
                 .build();
 
         PolicyStatement logsPolicy = PolicyStatement.Builder.create()
                 .actions(Arrays.asList("logs:CreateLogGroup", "logs:CreateLogStream", "logs:PutLogEvents"))
-                .resources(Arrays.asList("*"))
+                .resources(List.of("*"))
                 .build();
 
         Role ecsTaskRole = Role.Builder.create(this, "EcsTaskRole")
@@ -71,7 +233,7 @@ public class S3SqsBridgeStack extends Stack {
                 ))
                 .build();
 
-        // Docker Image for the reseed task.
+        // Docker Image for the replay task.
         DockerImageAsset dockerImage = DockerImageAsset.Builder.create(this, "DockerImage")
                 .directory("./") // Project root containing Dockerfile
                 .build();
@@ -85,7 +247,7 @@ public class S3SqsBridgeStack extends Stack {
                 .taskRole(ecsTaskRole)
                 .build();
 
-        ContainerDefinition container = taskDefinition.addContainer("ReseedContainer",
+        ContainerDefinition container = taskDefinition.addContainer("ReplayContainer",
                 ContainerDefinitionOptions.builder()
                         .image(ContainerImage.fromDockerImageAsset(dockerImage))
                         .logging(LogDriver.awsLogs(AwsLogDriverProps.builder()
@@ -93,7 +255,9 @@ public class S3SqsBridgeStack extends Stack {
                                 .build()))
                         .environment(Map.of(
                                 "BUCKET_NAME", bucketName,
-                                "QUEUE_URL", eventQueue.getQueueUrl(),
+                                "OBJECT_PREFIX", objectPrefix,
+                                "SOURCE_QUEUE_URL", sourceQueue.getQueueUrl(),
+                                "REPLAY_QUEUE_URL", replayQueue.getQueueArn(),
                                 "AWS_REGION", this.getRegion()
                         ))
                         .build());
@@ -103,8 +267,8 @@ public class S3SqsBridgeStack extends Stack {
                 .protocol(Protocol.TCP)
                 .build());
 
-        // Fargate Service using Spot Instances for reseed job.
-        ApplicationLoadBalancedFargateService reseedService = ApplicationLoadBalancedFargateService.Builder.create(this, "ReseedService")
+        // Fargate Service using Spot Instances for replay job.
+        ApplicationLoadBalancedFargateService replayService = ApplicationLoadBalancedFargateService.Builder.create(this, "ReplayService")
                 .cluster(cluster)
                 .serviceName(taskServiceName)
                 .cpu(taskCpu)
@@ -121,16 +285,36 @@ public class S3SqsBridgeStack extends Stack {
                 .build();
 
         // Grant the ECS task role permission to send messages and read the bucket.
-        eventQueue.grantSendMessages(ecsTaskRole);
+        sourceQueue.grantSendMessages(ecsTaskRole);
         s3Bucket.grantRead(ecsTaskRole);
 
         // Outputs for post-deployment verification.
-        CfnOutput.Builder.create(this, "BucketName")
-                .value(s3Bucket.getBucketName())
+        CfnOutput.Builder.create(this, "BucketArn")
+                .value(s3Bucket.getBucketArn())
                 .build();
 
-        CfnOutput.Builder.create(this, "QueueUrl")
-                .value(eventQueue.getQueueUrl())
+        CfnOutput.Builder.create(this, "S3AccessRoleArn")
+                .value(s3AccessRole.getRoleArn())
+                .build();
+
+        CfnOutput.Builder.create(this, "SourceQueueUrl")
+                .value(sourceQueue.getQueueUrl())
+                .build();
+
+        CfnOutput.Builder.create(this, "ReplayQueueUrl")
+                .value(replayQueue.getQueueUrl())
+                .build();
+
+        CfnOutput.Builder.create(this, "SourceLambdaArn")
+                .value(sourceLambda.getFunctionArn())
+                .build();
+
+        CfnOutput.Builder.create(this, "ReplayLambdaArn")
+                .value(replayLambda.getFunctionArn())
+                .build();
+
+        CfnOutput.Builder.create(this, "FargateTaskDefinitionArn")
+                .value(taskDefinition.getTaskDefinitionArn())
                 .build();
 
         CfnOutput.Builder.create(this, "EcsClusterArn")
@@ -140,13 +324,47 @@ public class S3SqsBridgeStack extends Stack {
         CfnOutput.Builder.create(this, "TaskRoleArn")
                 .value(ecsTaskRole.getRoleArn())
                 .build();
+
+        CfnOutput.Builder.create(this, "OffsetsTableArn")
+                .value(offsetsTable.getTableArn())
+                .build();
     }
 
     private String getConfigValue(String key) {
-        Object value = this.getNode().tryGetContext(key);
+        Object value = null;
+        try {
+            value = this.getNode().tryGetContext(key);
+        }catch (Exception e) {
+            // NOP
+        }
         if (value == null || value.toString().isEmpty()) {
             throw new IllegalArgumentException("Missing required context key: " + key);
         }
         return value.toString();
+    }
+
+    private String getConfigValue(String envVarName, String contextKey) {
+        String value = System.getenv(envVarName);
+        if (value == null || value.isEmpty()) {
+            Object contextValue = null;
+            try {
+                contextValue = this.getNode().tryGetContext(contextKey);
+            }catch (Exception e) {
+                // NOP
+            }
+            if (contextValue != null && !contextValue.toString().isEmpty()) {
+                //if (!contextValue.toString().isEmpty()) {
+                CfnOutput.Builder.create(this, contextKey)
+                        .value(contextValue.toString() + " (Source: CDK context.)")
+                        .build();
+                return contextValue.toString();
+            } else {
+                throw new IllegalArgumentException("No value found for " + envVarName + " or context key " + contextKey);
+            }
+        }
+        CfnOutput.Builder.create(this, contextKey)
+                .value(value + " (Source: environment variable " + envVarName + ".)")
+                .build();
+        return value;
     }
 }
